2005-11-14 Richard Frith-Macdonald  <rfm@gnu.org>

	Factor out WebServer into separate library, and timer and caching
	stuff into Performance library.  Make this library depend on the
	Performance library.

2005-10-27 Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Add more accurate timestamps and implement request
	and session duration logging.  Also add a unique session ID number
	to each log to make it easy to track requests on a session.

2005-09-28 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile.wrapper.objc.preamble: new file
	* SQLClient.jigs: new file
	* GNUmakefile: Provide java wrappings for SQLClient and friends

2005-09-28 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: boost performance of quoting a little.
	Provide -count method for transactions.


2005-09-26 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: Clean up caching/timestamps.
	* SQLClient.m: ditto.

2005-09-22 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: Rewrite caching, and expose cache for external use.
	* SQLClient.m: ditto.

2005-09-20 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: make SQLRecord modifieable (replace values).
	* SQLClient.m: ditto.

2005-09-15 Richard Frith-Macdonald  <rfm@gnu.org>

        * configure.ac: Locate postgres 8.0 on debian
	* configure: regenerate
		
2005-08-03 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Add SQLClient_LIBRARIES_DEPEND_UPON for apple as
	suggested by Yen-Ju Chen.
	* SQLClient.m: Don't call allocation debug functions on apple,
	and avoid bogus apple compiler warning.
	Guard against nil object passed to NSMapRemove() ... the apple
	implementation crashes on this.

2005-08-02 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Don't build WebServer stuff on MacOS-X when using the
	apple runtime (and presumably foundation).

2005-07-07 Richard Frith-Macdonald  <rfm@gnu.org>

	* MySQL.m:
	* SQLClient.m:
	* WebServer.h:
	* WebServer.m: